2015-08-28  Jan Nijtmans  <nijtmans@users.sf.net>

	* configure:          Rfe [00189c4afc]: Allow semi-static UCRT build on
	* win/makefile.vc     Windows with VC 14.0
	* win/rules.vc

2013-07-04  Jan Nijtmans <nijtmans@users.sf.net>

	* configure:          Regenerated to use latest TEA tcl.m4.
	* Makefile.in:        Make test-suite runnable from installed directory.

2013-07-02  Jan Nijtmans <nijtmans@users.sf.net>

	* configure:          Regenerated to use latest TEA tcl.m4.
	* Makefile.in:        Use $(INSTALL_DATA_DIR) in stead of mkdir.
	* .fossil-settings/*: Versioned settings for fossil.

2012-08-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/nmakehlp.c: Add "-V<num>" option, in order to be able
	to detect partial version numbers.

2012-08-12  Jan Nijtmans <nijtmans@users.sf.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
	* win/rules.vc: Remove some unused code, always set
	USE_THREAD_ALLOC in combination with TCL_THREADS

2010-08-03  Stuart Cassoff  <stwo@users.sourceforge.net>

	* ChangeLog:		Zap trailing whitespace.
	* README.sha:		No functional change.
	* win/nmakehlp.c:
	* Makefile.in:		DON'T use gnu tar; use normal tar.

2010-08-02  Stuart Cassoff  <stwo@users.sourceforge.net>

	* README.sha:		Zap trailing whitespace.
	* doc/sha1.n:		No functional change.
	* generic/sample.c:
	* generic/tclsample.c:
	* license.terms:
	* win/makefile.vc:
	* ChangeLog:		Fix wrong date in previous ChangeLog entry.

2010-08-01  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in:	Tidy: Whitespace, formatting, spelling.
	* configure.in:	No functional change.

2012-08-01  Jan Nijtmans <nijtmans@users.sf.net>

	* win/makefile.vc: Sync with latest Tcl 8.6 updates
	* win/rules.vc:
	* win/pkg.vc:

2012-02-27  Jan Nijtmans <nijtmans@users.sf.net>

	* configure:	Regenerated to use latest TEA tcl.m4.
	* <all>:        Purge RCS keywords.

2010-12-15  Stuart Cassoff  <stwo@users.sourceforge.net>

	* configure.in:	Upgrade to newer install-sh and use it.